--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_NUMBER=
+TWILIO_ACCOUNT_SID=AC05472ca604b301ff6c9cc6d354194f97
+TWILIO_AUTH_TOKEN=9fdbb6eee4013c13f066772d1e5bc87b
+TWILIO_NUMBER=+14692146509
